--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     environment: production
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 'lts'
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.1' # Not needed with a .ruby-version file
