--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 'lts'
+        node-version: '16'
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.1' # Not needed with a .ruby-version file
