--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: herald@drachenwald.sca.org
 description: >- # this means to ignore newlines until "baseurl:"
   Drachenwald Book of Ceremonies
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ceremonies.drachenwald.sca.org" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
