--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
-    branches: [main]
 
 jobs:
   build:
@@ -14,6 +13,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: '16'
+        cache: 'npm'
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.1' # Not needed with a .ruby-version file
