--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         node-version: '16'
         cache: 'npm'
+    - run: npm ci
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.1' # Not needed with a .ruby-version file
