--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,6 @@ AddCharset utf-8 .xml
 RewriteEngine On
 RewriteCond %{ENV:HTTPS} !on [OR]
 RewriteCond %{HTTP_HOST} ^www\. [NC]
-RewriteRule ^ https://drachenwald.sca.org%{REQUEST_URI} [L,NE,R=301]
+RewriteRule ^ https://ceremonies.drachenwald.sca.org%{REQUEST_URI} [L,NE,R=301]
 
 ErrorDocument 404 /404.html
